@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3608 utf-8
+personal_ws-1.1 en 3616 utf-8
 AAC
 AAS
 ABI
@@ -2691,6 +2691,7 @@ nm
 nn
 nnn
 noAuthNoPriv
+nobattery
 nobody's
 nobreak
 nobt
@@ -2788,6 +2789,7 @@ openmp
 openpimi
 openssh
 openssl
+openups
 openwin
 oper
 optimizations
